test/expected/unset_readonly.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "readonly" "x=1"]
  [CompoundListCondition, None]
    [SimpleCommand "unset" "x"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "x=$x"]
[Word
  Unquoted "readonly"
]
[Word
  Unquoted "x=1"
]
[Word
  Unquoted "unset"
]
[Word
  Unquoted "x"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "x="
  Variable "x"
]
shit: 3:7: error: Builtin 'unset': 'x' is read-only.
     3 |  unset x
       |        ^~ here.
x=1
[Code 0]
